[gd_scene load_steps=7 format=2]

[ext_resource path="res://gui/HUD.gd" type="Script" id=1]
[ext_resource path="res://art/partialmenu.png" type="Texture" id=2]
[ext_resource path="res://gui/DialogPopups.tscn" type="PackedScene" id=3]
[ext_resource path="res://gui/Score_Status.tscn" type="PackedScene" id=4]
[ext_resource path="res://SFX/Picked Coin Echo.wav" type="AudioStream" id=5]
[ext_resource path="res://gui/trimguage.tscn" type="PackedScene" id=6]

[node name="HUD" type="CanvasLayer"]
process_priority = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 334.0 ],
"_edit_vertical_guides_": [ 754.0, 450.0 ]
}

[node name="consolelbl" type="ColorRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -270.0
margin_top = 4.0
margin_right = -6.0
margin_bottom = 24.0
rect_min_size = Vector2( 80, 20 )
color = Color( 0.67451, 0.666667, 0.666667, 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="ConsoleTitle" type="Label" parent="consolelbl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -10.0
margin_right = 90.0
margin_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 180, 20 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Control Console"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Console" type="VBoxContainer" parent="."]
anchor_top = -0.001
anchor_bottom = -0.001
margin_left = 838.0
margin_top = 28.6
margin_right = 1018.0
margin_bottom = 248.6
grow_horizontal = 0
rect_min_size = Vector2( 180, 220 )

[node name="Guage" type="ColorRect" parent="Console"]
margin_right = 180.0
margin_bottom = 40.0
rect_min_size = Vector2( 180, 40 )
color = Color( 0.67451, 0.666667, 0.666667, 1 )

[node name="ColorRect" type="ColorRect" parent="Console/Guage"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -85.0
margin_top = -16.0
margin_right = 85.0
margin_bottom = 16.0
rect_min_size = Vector2( 170, 32 )
color = Color( 0.0392157, 0.0352941, 0.0352941, 1 )

[node name="Rescue_depth" type="Label" parent="Console/Guage"]
anchor_right = 0.611
anchor_bottom = 1.0
margin_right = 0.0199966
rect_min_size = Vector2( 140, 40 )
text = "768.8"
align = 1
valign = 1
uppercase = true

[node name="Units" type="Label" parent="Console/Guage"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -70.0
margin_top = -20.0
margin_right = -1.52588e-05
margin_bottom = 20.0
rect_min_size = Vector2( 70, 40 )
text = "FSW"
align = 1
valign = 1

[node name="Guage2" type="ColorRect" parent="Console"]
margin_top = 44.0
margin_right = 180.0
margin_bottom = 84.0
rect_min_size = Vector2( 180, 40 )
color = Color( 0.67451, 0.666667, 0.666667, 1 )

[node name="ColorRect" type="ColorRect" parent="Console/Guage2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -85.0
margin_top = -16.0
margin_right = 85.0
margin_bottom = 16.0
rect_min_size = Vector2( 170, 32 )
color = Color( 0.0392157, 0.0352941, 0.0352941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rescue_internal" type="Label" parent="Console/Guage2"]
anchor_right = 0.611
anchor_bottom = 1.0
margin_right = 0.0199966
rect_min_size = Vector2( 140, 40 )
text = "14.67"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Units" type="Label" parent="Console/Guage2"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -70.0
margin_top = -20.0
margin_right = -1.52588e-05
margin_bottom = 20.0
rect_min_size = Vector2( 70, 40 )
text = "PSI"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Guage3" type="ColorRect" parent="Console"]
margin_top = 88.0
margin_right = 180.0
margin_bottom = 128.0
rect_min_size = Vector2( 180, 40 )
color = Color( 0.67451, 0.666667, 0.666667, 1 )

[node name="ColorRect" type="ColorRect" parent="Console/Guage3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -85.0
margin_top = -16.0
margin_right = 85.0
margin_bottom = 16.0
rect_min_size = Vector2( 170, 32 )
color = Color( 0.0392157, 0.0352941, 0.0352941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rescue_seapress" type="Label" parent="Console/Guage3"]
anchor_right = 0.611
anchor_bottom = 1.0
margin_right = 0.0199966
rect_min_size = Vector2( 140, 40 )
text = "068.8"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Units" type="Label" parent="Console/Guage3"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -70.0
margin_top = -20.0
margin_right = -1.52588e-05
margin_bottom = 20.0
rect_min_size = Vector2( 70, 40 )
text = "PSI"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Guage4" type="ColorRect" parent="Console"]
margin_top = 132.0
margin_right = 180.0
margin_bottom = 172.0
rect_min_size = Vector2( 180, 40 )
color = Color( 0.67451, 0.666667, 0.666667, 1 )

[node name="ColorRect" type="ColorRect" parent="Console/Guage4"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -85.0
margin_top = -16.0
margin_right = 85.0
margin_bottom = 16.0
rect_min_size = Vector2( 170, 32 )
color = Color( 0.0392157, 0.0352941, 0.0352941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TS_press" type="Label" parent="Console/Guage4"]
anchor_right = 0.611
anchor_bottom = 1.0
margin_right = 0.0199966
rect_min_size = Vector2( 140, 40 )
text = "068.8"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Units" type="Label" parent="Console/Guage4"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -70.0
margin_top = -20.0
margin_right = -1.52588e-05
margin_bottom = 20.0
rect_min_size = Vector2( 70, 40 )
text = "PSI"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="labels" type="VBoxContainer" parent="."]
margin_left = 754.333
margin_top = 28.0
margin_right = 834.333
margin_bottom = 200.0

[node name="GaugeLabel" type="ColorRect" parent="labels"]
margin_right = 80.0
margin_bottom = 40.0
rect_min_size = Vector2( 80, 40 )
color = Color( 0.67451, 0.666667, 0.666667, 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="GaugeLabel2" type="Label" parent="labels/GaugeLabel"]
anchor_left = 0.278
anchor_right = 0.828
anchor_bottom = 1.0
margin_left = -22.24
margin_right = 13.76
rect_min_size = Vector2( 80, 40 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Sub Depth"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GaugeLabel2" type="ColorRect" parent="labels"]
margin_top = 44.0
margin_right = 80.0
margin_bottom = 84.0
rect_min_size = Vector2( 80, 40 )
color = Color( 0.67451, 0.666667, 0.666667, 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="GaugeLabel2" type="Label" parent="labels/GaugeLabel2"]
anchor_left = 0.278
anchor_right = 0.828
anchor_bottom = 1.0
margin_left = -22.24
margin_right = 13.76
rect_min_size = Vector2( 80, 40 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Sub Pressure"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GaugeLabel3" type="ColorRect" parent="labels"]
margin_top = 88.0
margin_right = 80.0
margin_bottom = 128.0
rect_min_size = Vector2( 80, 40 )
color = Color( 0.67451, 0.666667, 0.666667, 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="GaugeLabel2" type="Label" parent="labels/GaugeLabel3"]
anchor_left = 0.278
anchor_right = 0.828
anchor_bottom = 1.0
margin_left = -22.24
margin_right = 13.76
rect_min_size = Vector2( 80, 40 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Sea Pressure"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GaugeLabel4" type="ColorRect" parent="labels"]
margin_top = 132.0
margin_right = 80.0
margin_bottom = 172.0
rect_min_size = Vector2( 80, 40 )
color = Color( 0.67451, 0.666667, 0.666667, 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="GaugeLabel2" type="Label" parent="labels/GaugeLabel4"]
anchor_left = 0.278
anchor_right = 0.828
anchor_bottom = 1.0
margin_left = -22.24
margin_right = 13.76
rect_min_size = Vector2( 80, 40 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Transfer Pressure"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mating" type="HBoxContainer" parent="."]
margin_left = 754.0
margin_top = 203.0
margin_right = 1018.0
margin_bottom = 243.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GaugeLabel5" type="ColorRect" parent="Mating"]
margin_right = 80.0
margin_bottom = 40.0
rect_min_size = Vector2( 80, 40 )
color = Color( 0.67451, 0.666667, 0.666667, 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="GaugeLabel2" type="Label" parent="Mating/GaugeLabel5"]
anchor_left = 0.278
anchor_right = 0.828
anchor_bottom = 1.0
margin_left = -22.24
margin_right = 13.76
rect_min_size = Vector2( 80, 40 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Mate
Status"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MatingStatus" type="ColorRect" parent="Mating"]
margin_left = 84.0
margin_right = 264.0
margin_bottom = 40.0
rect_min_size = Vector2( 120, 40 )
size_flags_horizontal = 3
color = Color( 0.67451, 0.666667, 0.666667, 1 )

[node name="ColorRect" type="ColorRect" parent="Mating/MatingStatus"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -85.0
margin_top = -16.0
margin_right = 85.0
margin_bottom = 16.0
rect_min_size = Vector2( 170, 32 )
color = Color( 0.0392157, 0.0352941, 0.0352941, 1 )

[node name="MateStatus" type="Label" parent="Mating/MatingStatus/ColorRect"]
anchor_right = 0.611
anchor_bottom = 1.0
margin_left = -5.0
margin_top = -4.0
margin_right = 31.13
margin_bottom = 4.0
rect_min_size = Vector2( 140, 40 )
custom_colors/font_color = Color( 0.74902, 0.0117647, 0.0117647, 1 )
text = "BROKEN"
align = 1
valign = 1
uppercase = true

[node name="Units" type="Label" parent="Mating/MatingStatus/ColorRect"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -65.0
margin_top = -20.0
margin_right = 5.0
margin_bottom = 20.0
rect_min_size = Vector2( 70, 40 )
text = "SEAL
STATUS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="crewstats" type="HBoxContainer" parent="."]
margin_left = 754.0
margin_top = 246.333
margin_right = 1018.0
margin_bottom = 286.333

[node name="GaugeLabel5" type="ColorRect" parent="crewstats"]
margin_right = 80.0
margin_bottom = 40.0
rect_min_size = Vector2( 80, 40 )
color = Color( 0.67451, 0.666667, 0.666667, 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="GaugeLabel2" type="Label" parent="crewstats/GaugeLabel5"]
anchor_left = 0.278
anchor_right = 0.828
anchor_bottom = 1.0
margin_left = -22.24
margin_right = 13.76
rect_min_size = Vector2( 80, 40 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Crew
Health"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MatingStatus" type="ColorRect" parent="crewstats"]
margin_left = 84.0
margin_right = 264.0
margin_bottom = 40.0
rect_min_size = Vector2( 180, 40 )
color = Color( 0.67451, 0.666667, 0.666667, 1 )

[node name="ColorRect" type="ColorRect" parent="crewstats/MatingStatus"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -85.0
margin_top = -16.0
margin_right = 85.0
margin_bottom = 16.0
rect_min_size = Vector2( 170, 32 )
color = Color( 0.0392157, 0.0352941, 0.0352941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CrewStatus" type="Label" parent="crewstats/MatingStatus/ColorRect"]
anchor_right = 0.611
anchor_bottom = 1.0
margin_left = -5.0
margin_top = -4.0
margin_right = 31.13
margin_bottom = 4.0
rect_min_size = Vector2( 140, 40 )
custom_colors/font_color = Color( 0, 0.996078, 0.364706, 1 )
align = 1
valign = 1
uppercase = true

[node name="Units" type="Label" parent="crewstats/MatingStatus/ColorRect"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -71.0
margin_top = -20.0
margin_right = 5.0
margin_bottom = 20.0
rect_min_size = Vector2( 70, 40 )
text = "Survivors"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="crewsaves" type="HBoxContainer" parent="."]
margin_left = 754.0
margin_top = 290.333
margin_right = 1018.0
margin_bottom = 330.333

[node name="GaugeLabel5" type="ColorRect" parent="crewsaves"]
margin_right = 80.0
margin_bottom = 40.0
rect_min_size = Vector2( 80, 40 )
color = Color( 0.67451, 0.666667, 0.666667, 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="GaugeLabel2" type="Label" parent="crewsaves/GaugeLabel5"]
anchor_left = 0.278
anchor_right = 0.828
anchor_bottom = 1.0
margin_left = -22.24
margin_right = 13.76
rect_min_size = Vector2( 80, 40 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Rescues"
align = 1
valign = 1
autowrap = true

[node name="MatingStatus" type="ColorRect" parent="crewsaves"]
margin_left = 84.0
margin_right = 264.0
margin_bottom = 40.0
rect_min_size = Vector2( 180, 40 )
color = Color( 0.67451, 0.666667, 0.666667, 1 )

[node name="ColorRect" type="ColorRect" parent="crewsaves/MatingStatus"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -85.0
margin_top = -16.0
margin_right = 85.0
margin_bottom = 16.0
rect_min_size = Vector2( 170, 32 )
color = Color( 0.0392157, 0.0352941, 0.0352941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SavesStatus" type="Label" parent="crewsaves/MatingStatus/ColorRect"]
anchor_right = 0.611
anchor_bottom = 1.0
margin_left = -5.0
margin_top = -4.0
margin_right = 31.13
margin_bottom = 4.0
rect_min_size = Vector2( 140, 40 )
custom_colors/font_color = Color( 0, 0.996078, 0.364706, 1 )
text = "97"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Units" type="Label" parent="crewsaves/MatingStatus/ColorRect"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -71.0
margin_top = -20.0
margin_right = 5.0
margin_bottom = 20.0
rect_min_size = Vector2( 70, 40 )
text = "Rescued"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pausebkgd" type="TextureRect" parent="."]
visible = false
anchor_left = 0.442
anchor_top = -0.002
anchor_right = 0.995
anchor_bottom = 0.998
margin_left = 0.391968
margin_top = 0.2
margin_right = 0.119934
margin_bottom = 0.200012
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score_Status" parent="." instance=ExtResource( 4 )]

[node name="rescuequeery" parent="." instance=ExtResource( 3 )]

[node name="xfercomplete" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="trimguage" parent="." instance=ExtResource( 6 )]
margin_left = 230.0
margin_top = 5.0
margin_right = 230.0
margin_bottom = 5.0
